# XDataFrame

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md  docker-compose.debug.yml  entrypoint.sh  idea.md  servicex.yaml  submit_request.json  test.yml  testfileGood.root  workspace.code-workspace  xdataframe.yml
RDataFrameHandler/: CMakeLists.txt  CheckLoad.C  DictLinkDef.h  RDataFrameHandler.cxx  RDataFrameHandler.h
ServiceXHandler/: .CMakeLists.txt  CMakeLists.txt
demo/: CMakeLists.txt  demo.cxx
dev/: Dockerfile
exe/: XDataFrame.cxx
include/: DataBucket.h  Hasher.h  MCache.h  RDataFrameHandler.h  Request.h  ServiceXHandler.h  User.h  XDataFrame.h  XDataFrameConfig.h.in  XDataFrameLinkDef.h
src/: CMakeLists.txt  Hasher.cpp  MCache.cpp  MathLibrary.cpp  RDataFrameHandler.cpp  Request.cpp  ServiceXHandler.cpp  User.cpp  XDataFrame.cpp  XDataFrame.cxx
tests/: CMakeLists.txt  basicTest.cpp
